# libuxplay

./: .gitignore  CMakeLists.txt  README.md
examples/: UxPlayInterop.cs  test_uxplaylib.c
include/: uxplaylib.h
lib/: CMakeLists.txt
lib/llhttp/: CMakeLists.txt
lib/playfair/: CMakeLists.txt
renderers/: CMakeLists.txt  video_renderer.c
src/: uxplay_api.h  uxplay_core.cpp  uxplaylib.cpp
